fix: fix wrap display

--- a/src/component/card/courseCard/CourseCard.module.scss
+++ b/src/component/card/courseCard/CourseCard.module.scss
@@ -122,7 +122,7 @@ $colorTwo: black;
 @media (max-width: 1000px) {
   .cardContainer {
     width: 240px !important;
-    height: 280px !important;
+    height: 260px !important;
   }
   .title {
     font-size: 0.9rem !important;
